// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StarsRating /> Should have a specific css rules if has a half star 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
}

.c1 {
  display: inline-block;
  color: #ffc104;
  overflow: hidden;
  width: 16px;
  text-overflow: clip;
}

<div>
  <div
    class="c0"
  >
    <i
      class="c1 fas fa-star"
      data-testid="filled-star"
    />
    <i
      class="c1 fas fa-star"
      data-testid="filled-star"
    />
    <i
      class="c1 fas fa-star"
      data-testid="filled-star"
    />
    <i
      class="c1 fas fa-star-half-alt"
      data-testid="half-star"
    />
    <i
      class="c1 far fa-star"
      data-testid="empty-star"
    />
  </div>
</div>
`;

exports[`<StarsRating /> Should have a specific css rules if has all stars empty 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
}

.c1 {
  display: inline-block;
  color: #ffc104;
  overflow: hidden;
  width: 16px;
  text-overflow: clip;
}

<div>
  <div
    class="c0"
  >
    <i
      class="c1 far fa-star"
      data-testid="empty-star"
    />
    <i
      class="c1 far fa-star"
      data-testid="empty-star"
    />
    <i
      class="c1 far fa-star"
      data-testid="empty-star"
    />
    <i
      class="c1 far fa-star"
      data-testid="empty-star"
    />
    <i
      class="c1 far fa-star"
      data-testid="empty-star"
    />
  </div>
</div>
`;

exports[`<StarsRating /> Should have a specific css rules if has all stars filled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
}

.c1 {
  display: inline-block;
  color: #ffc104;
  overflow: hidden;
  width: 16px;
  text-overflow: clip;
}

<div>
  <div
    class="c0"
  >
    <i
      class="c1 fas fa-star"
      data-testid="filled-star"
    />
    <i
      class="c1 fas fa-star"
      data-testid="filled-star"
    />
    <i
      class="c1 fas fa-star"
      data-testid="filled-star"
    />
    <i
      class="c1 fas fa-star"
      data-testid="filled-star"
    />
    <i
      class="c1 fas fa-star"
      data-testid="filled-star"
    />
  </div>
</div>
`;
